--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -43,6 +43,46 @@ a:hover {
 
 /*#endregion */
 
+/*#region Popup */
+
+.popup-full {
+    position: fixed;
+    z-index: 30;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+    .popup-full .khung-tat {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+
+    .popup-full .khung-noi-dung {
+        margin: 0 auto;
+        background-image: linear-gradient(top, #fff, rgba(255, 255, 255, 0.1));
+        background-image: -webkit-linear-gradient(top, #fff, rgba(255, 255, 255, 0.1));
+        background-image: -moz-linear-gradient(top, #fff, rgba(255, 255, 255, 0.1));
+        margin-top: 10vh;
+        padding: 5px;
+        border: 1px solid #ddd;
+        position: relative;
+        max-width: 90vw;
+        max-height: 80vh;
+        overflow-y: auto;
+    }
+    
+        .popup-full .khung-noi-dung > .tieu-de {
+            font: normal 20px Freeway;
+            color: #08c;
+            line-height: 30px;
+            margin-bottom: 5px;
+            text-align: center;
+        }    
+
+/*#endregion */
+
 /*#region Header */
 
 header {
@@ -460,6 +500,7 @@ main > .cot-giua {
     width: 50%;
     margin: 0 auto;
 }
+
 /*#endregion */
 
 /*#endregion */
