--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -7,6 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/images/LCT/mini_logo.png" rel="icon" />
     <title>@(ViewData["TieuDe"] != null ? ViewData["TieuDe"] + " - " : "") LCTMoodle</title>
 
     <link href="/Content/styles/LCT/Khung.css" rel="stylesheet" />
