--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -42,6 +42,18 @@
                     </article>
                 </section>
             </li>
+            <li>
+                <section class="tieu-de">
+                    <label>
+                        Lịch:
+                    </label>
+                </section>
+                <section class="noi-dung">
+                    <article class="input">
+                        <input data-input-type="lct-lich" name="name" value="" data-mac-dinh="23.12.1234" placeholder="Chọn ngày" />
+                    </article>
+                </section>
+            </li>
         </ul>
         <section class="lct-khung-button">
             <button type="submit" class="chap-nhan">
