--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -20,15 +20,15 @@
             <ul class="nut">
                 <li>
                     <a href="#">
-                        Chủ đề gốc
+                        Chọn phạm vi
                     </a>
                     <u>
                         <ul class="nut-con">
-                            @*<li>
+                            <li>
                                 <a href="#">
                                     a123123
                                 </a>
-                            </li>*@
+                            </li>
                         </ul>
                     </u>
                 </li>
@@ -37,38 +37,52 @@
         <section class="con">
             <a href="javascript:void(0)" data-chuc-nang="tao"><i class="pe-7s-plus"></i>Hiện chưa có nút con, hãy tạo một nút con mới</a>
             <ul class="muc">
-                @*<li>
-                    <section class="mo-ta">
-                        <img src="#">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        </p>
-                    </section>
-                    <a href="#" class="ten" data-so-luong="8">
-                        defdef
-                    </a>
-                    <section class="chuc-nang">
-                        <i class="pe-7s-config"></i>
-                        <ul>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    Xoa chu de
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    Xoa chu de
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0)">
-                                    Xoa chu de
-                                </a>
-                            </li>
-                        </ul>
-                    </section>
-                </li>*@
-            </ul>
+                @foreach (KeyValuePair<string, Dictionary<string, string>> phamVi in LCTMoodle.Helpers.LCTHelper.layDanhSachPhamVi_DayDu())
+                {
+                    <li>
+                        <section class="mo-ta">
+                            <img src="/Content/images/LCT/ChuDe/@phamVi.Value["Hinh"]">
+                            <p>
+                                @phamVi.Value["MoTa"]
+                            </p>
+                        </section>
+                        <a href="#" class="ten" data-value="@phamVi.Value" data-so-luong="0">
+                            @phamVi.Key
+                        </a>
+                    </li>
+                }                
+                    @*<li>
+                <section class="mo-ta">
+                    <img src="#">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    </p>
+                </section>
+                <a href="#" class="ten" data-so-luong="8">
+                    defdef
+                </a>
+                <section class="chuc-nang">
+                    <i class="pe-7s-config"></i>
+                    <ul>
+                        <li>
+                            <a href="javascript:void(0)">
+                                Xoa chu de
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)">
+                                Xoa chu de
+                            </a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)">
+                                Xoa chu de
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+            </li>*@
+</ul>
         </section>
         <section class="khung-chuc-nang">
             <ul>
