--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -1359,7 +1359,6 @@
             display: block;
             float: left;
             padding: 0px 10px;
-            transition: 0.5s;
             color: #555;
             line-height: 30px;
         }
@@ -1457,7 +1456,7 @@
             position: relative;
         }
 
-        .lct-cay .con.rong > a {
+        .lct-cay .muc.rong ~ a {
             display: block;
         }
 
@@ -1557,7 +1556,7 @@
             color: #000;
         }
 
-        .lct-cay .muc .ten:before {
+        /*.lct-cay .muc .ten:before {
             content: attr(data-so-luong);
             font: normal 15px Berlin;
             display: inline-block;
@@ -1568,8 +1567,8 @@
             color: black;
             background-color: #f5f5f5;
             border: 1px solid #eee;
-        }
-
+        }*/
+        
     .lct-cay .muc .chuc-nang {
         position: absolute;
         top: 0px;
@@ -1655,6 +1654,10 @@
         border: 1px solid #ddd;
         background-color: #fff;
     }
+
+        .lct-cay[data-ma="PhamVi"] .khung-chuc-nang {
+            display: none;
+        }
 
         .lct-cay .khung-chuc-nang li {
             opacity: 0;
