--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -170,6 +170,8 @@
 
     <script src="/Content/scripts/LCT/jquery.min.js"></script>
     <script src="/Content/scripts/LCT/Khung.js"></script>
+    <script src="/Content/scripts/LCT/Form.js"></script>
+    <script src="/Content/ckeditor/ckeditor.js"></script>
     @RenderSection("Scripts", false)
 </body>
 </html>
