--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/Content/styles/LCT/Form.css" />
 }
 @section Scripts {
-    <script src="/Content/scripts/LCT/Form.js"></script>
+
 }
 
 <article class="hop">
@@ -16,6 +16,18 @@
     <form action="#" method="post" class="noi-dung lct-form">
         <article>
             <ul>
+                <li>
+                    <section class="tieu-de">
+                        <label>
+                            Editor:
+                        </label>
+                    </section>
+                    <section class="noi-dung">
+                        <article class="input">
+                            <textarea name="name" data-input-type="editor" data-mac-dinh="Mặc định (editor)" placeholder="Hãy nhập"></textarea>
+                        </article>
+                    </section>
+                </li>
                 <li>
                     <section class="tieu-de">
                         <label>
