--- a/LCTMoodle/Content/styles/NguoiDung/Index.css
+++ b/LCTMoodle/Content/styles/NguoiDung/Index.css
@@ -1,47 +1,76 @@
-﻿.khung-nguoi-dung {
-    display: flex;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -o-flex;    
-    flex-direction: column;
-}
-    .khung-nguoi-dung .khung-tren {        
-        flex-direction: row;                
-        background: -webkit-linear-gradient(left, #eaeaea, #f5f5f5); /* For Safari 5.1 to 6.0 */
-        background: -o-linear-gradient(right, #eaeaea, #f5f5f5); /* For Opera 11.1 to 12.0 */
-        background: -moz-linear-gradient(right, #eaeaea, #f5f5f5); /* For Firefox 3.6 to 15 */
-        background: linear-gradient(to right, #eaeaea, #f5f5f5); /* Standard syntax (must be last) */
-    }
-        .khung-nguoi-dung .khung-tren .hinh-dai-dien {            
-            float: left;
-            height: 100px;
-        }
-            .khung-nguoi-dung .khung-tren .hinh-dai-dien img {
-                height: 100%;
-            }
-        .khung-nguoi-dung .khung-tren .thong-tin-nguoi-dung {            
-            padding-left: 10px;
-            float: left;
-            height: 100px;
-        }
-            .khung-nguoi-dung .khung-tren .ten-nguoi-dung {
-                line-height: 50px;
-                color: #333;
-                font-size: 2em;
-            }
-            .khung-nguoi-dung .khung-tren .loai-nguoi-dung {
-                color: #666;                
-            }
-    .khung-nguoi-dung .khung-duoi {
-        flex-direction: column;
-        padding: 10px 0;
-    }
-        .khung-nguoi-dung .khung-duoi > .item {
+﻿/*#region Khung trên */
 
+.khung-tren {
+    display: flex;
+}
+
+    .khung-tren .hinh-dai-dien {
+        max-height: 100px;    
+        min-height: 100px;
+        max-width: 100px;
+        min-width: 100px;        
+    }
+    
+        .khung-tren .hinh-dai-dien img {
+            height: 100%;
+            width: 100%;
         }
-            .khung-nguoi-dung .khung-duoi > .item > .tieu-de {
-                color: #333;
+
+    .khung-tren .thong-tin-nguoi-dung {
+        margin-left: 10px;
+        width: 100%;
+    }
+        .khung-tren .thong-tin-nguoi-dung .ten-nguoi-dung {
+            line-height: 50px;
+            color: #555;
+            font-size: 2em;
+        }
+        .khung-tren .thong-tin-nguoi-dung .loai-nguoi-dung {
+            color: #888; 
+        }
+
+/*#endregion */
+
+/*#region Khung dưới */
+
+.khung-duoi {
+    display: flex;
+    flex-direction: column;
+}   
+    .khung-duoi .dong-noi-dung {
+        display: flex;
+        position: relative;
+        padding: 5px;
+        margin: 5px 0;
+    }   
+        .khung-duoi .dong-noi-dung .tieu-de {
+            color: #888;
+            min-width: 150px;
+            max-width: 150px;
+        }
+        .khung-duoi .dong-noi-dung .noi-dung {
+            font-weight: bold;
+            width: 100%;
+            color: #555;
+        }
+        .khung-duoi .dong-noi-dung .chuc-nang:before {
+            position: absolute;
+            top: calc(50% - 10px);
+            right: 0;
+            font-size: 13px;
+            width: 20px;
+            height: 20px;
+            display: block;
+            line-height: 20px;
+            text-align: center;
+            opacity: 0.2;
+            transition: 0.5s;            
+        }
+            .khung-duoi .dong-noi-dung:hover .chuc-nang:before {
+                opacity: 1;                
             }
-            .khung-nguoi-dung .khung-duoi > .item > .noi-dung {
-                padding: 0 10px;
+
+            .khung-duoi .dong-noi-dung .chuc-nang:hover:before {
+                color: #08c;
             }
+/*#endregion */
