--- a/LCTMoodle/Views/NguoiDung/Index.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Index.cshtml
@@ -9,8 +9,8 @@
     
 }
 
-<article class="khung-nguoi-dung">
-    <div class="khung-tren">
+<section class="hop hop-2-vien">    
+    <article class="noi-dung khung-tren">
         <div class="hinh-dai-dien">
             <img src="/Content/images/user-avatar-01.jpg" />
         </div>
@@ -18,11 +18,25 @@
             <div class="ten-nguoi-dung">PenguinBlue-Chip</div>
             <div class="loai-nguoi-dung">Người dùng</div>
         </div>
-    </div>
-    <div class="khung-duoi">
-        <div class="item">
-            <div class="tieu-de">Thông tin cơ bản</div>
-            <div class="noi-dung">asd</div>
+    </article>
+</section>
+<section class="hop hop-1-vien" >  
+    <section class="tieu-de">Thông tin cơ bản</section>
+    <section class="noi-dung khung-duoi">
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Tên đăng nhập</div>
+            <div class="noi-dung" data-change="TenDangNhap">PenguinBlue-Chip</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="TenDangNhap"></a>
+        </div> 
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Mật khẩu</div>
+            <div class="noi-dung" data-change="TenDangNhap">*****</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="TenDangNhap"></a>
         </div>
-    </div>
-</article>
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Email</div>
+            <div class="noi-dung" data-change="TenDangNhap">penguinbluechip@gmail.com</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="TenDangNhap"></a>
+        </div>       
+    </section>
+</section>
