--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -1,9 +1,6 @@
 ﻿/*#region Chung */
 
 .lct-form {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 5px;
     color: #555;
 }
 
@@ -13,26 +10,21 @@
         clear: both;
     }
 
-    .lct-form > article {
-        background-color: #fcfcfc;
-        border: 1px solid #eee;
-    }
-
-        .lct-form > article > ul {
-            padding: 10px;
+        .lct-form > * > ul {
+            padding: 5px;
         }
 
-            .lct-form > article > ul > li {
+            .lct-form > * > ul > li {
                 display: flex;
                 margin: 10px 0px;
             }
 
-                .lct-form > article > ul > li > .tieu-de {
+                .lct-form > * > ul > li > .tieu-de {
                     min-width: 150px;
                     max-width: 150px;
                 }
 
-                .lct-form > article > ul > li > .noi-dung {
+                .lct-form > * > ul > li > .noi-dung {
                     width: 100%;
                 }
 
