--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -43,6 +43,61 @@ a:hover {
 
 /*#endregion */
 
+/*#region Khung hộp */
+
+.hop-2-vien > .noi-dung {
+    padding: 5px;
+    position: relative;
+    border: 1px solid #ddd;
+    background-color: #fff;
+}
+    .hop-2-vien > .noi-dung > * {
+        display: block;
+        background-color: #fcfcfc;
+        border: 1px solid #eee;
+    }
+
+.hop-1-vien > .noi-dung {
+    background-color: #fcfcfc;
+    border: 1px solid #eee;
+}
+
+.hop {
+    margin-bottom: 20px;
+}
+.hop:last-child {
+    margin-bottom: 0px;
+}
+
+.hop > .tieu-de {
+    font: normal 20px Freeway;
+    color: #08c;
+    line-height: 30px;
+    margin-bottom: 5px;
+}
+.hop > .tieu-de.can-giua {
+    text-align: center;
+}
+.hop > .noi-dung {
+
+}
+.hop-form {
+
+}
+.hop-form > .tieu-de {
+    text-align: center;
+    font: normal 30px Freeway;
+    color: #08c;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
+.hop-form > .noi-dung {
+    width: 50%;
+    margin: 0 auto;
+}
+
+/*#endregion */
+
 /*#region Popup */
 
 .popup-full {
@@ -61,9 +116,7 @@ a:hover {
 
     .popup-full .khung-noi-dung {
         margin: 0 auto;
-        background-image: linear-gradient(top, #fff, rgba(255, 255, 255, 0.1));
-        background-image: -webkit-linear-gradient(top, #fff, rgba(255, 255, 255, 0.1));
-        background-image: -moz-linear-gradient(top, #fff, rgba(255, 255, 255, 0.1));
+        background-color: rgba(255, 255, 255, 0.5);
         margin-top: 10vh;
         padding: 5px;
         border: 1px solid #ddd;
@@ -72,14 +125,6 @@ a:hover {
         max-height: 80vh;
         overflow-y: auto;
     }
-    
-        .popup-full .khung-noi-dung > .tieu-de {
-            font: normal 20px Freeway;
-            color: #08c;
-            line-height: 30px;
-            margin-bottom: 5px;
-            text-align: center;
-        }    
 
 /*#endregion */
 
@@ -545,72 +590,6 @@ main > .cot-giua {
     width: 100%;
     padding: 0px 20px;
 }
-
-/*.cot-giua .hop-vien {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    padding: 5px;
-}
-
-    .cot-giua .hop-vien > .hop {
-        background-color: #fcfcfc;
-        border: 1px solid #eee;
-    }*/
-
-
-.cot-giua .hop-2-vien > .noi-dung {
-    padding: 10px;
-    position: relative;
-    border: 1px solid #ddd;
-    background-color: #fff;
-    z-index: -1;
-}
-    .cot-giua .hop-2-vien > .noi-dung:before {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 5px;
-        left: 5px;
-        width: calc(100% - 12px);
-        height: calc(100% - 12px);
-        background-color: #fcfcfc;
-        border: 1px solid #eee;
-        z-index: -1;
-    }
-
-.cot-giua .hop-1-vien > .noi-dung {
-    background-color: #fcfcfc;
-    border: 1px solid #eee;
-    padding: 5px;
-}
-
-.cot-giua .hop {
-    margin-bottom: 20px;
-}
-.cot-giua .hop > .tieu-de {
-    font: normal 20px Freeway;
-    color: #08c;
-    line-height: 30px;
-    margin-bottom: 5px;
-}
-.cot-giua .hop > .noi-dung {
-
-}
-.cot-giua .hop-form {
-
-}
-.cot-giua .hop-form > .tieu-de {
-    text-align: center;
-    font: normal 30px Freeway;
-    color: #08c;
-    line-height: 30px;
-    margin-bottom: 20px;
-}
-.cot-giua .hop-form > .noi-dung {
-    width: 50%;
-    margin: 0 auto;
-}
-
 /*#endregion */
 
 /*#endregion */
