--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -14,6 +14,9 @@ body {
     font: normal 13px Tahoma;
     background-color: #f5f5f5;
 }
+body.khong-scroll {
+    overflow: hidden;
+}
 a {
     color: #000;
     text-decoration: none;  
@@ -102,9 +105,11 @@ a:hover {
 
 .popup-full {
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 19;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
 }
 
