--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -16,32 +16,38 @@
     <form action="#" method="post" class="noi-dung lct-form">
         <article>
             <ul>
-                <li>
+                <li class="co-loi">
                     <section class="tieu-de">
                         <label>
                             Editor:
                         </label>
                     </section>
-                    <section class="noi-dung">
-                        <article class="input">
+                    <section class="noi-dung co-loi">
+                        <section class="input">
                             <textarea name="name" data-input-type="editor" data-mac-dinh="Mặc định (editor)" placeholder="Hãy nhập"></textarea>
-                        </article>
+                        </section>
+                        <section class="loi">
+                            123asda ds asd
+                        </section>
                     </section>
                 </li>
-                <li>
+                <li class="co-loi">
                     <section class="tieu-de">
                         <label>
                             Select:
                         </label>
                     </section>
                     <section class="noi-dung">
-                        <article class="input">
+                        <section class="input">
                             <select name="select">
                                 <option value="1">Option 1</option>
                                 <option value="2">Option 2</option>
                                 <option value="3">Option 3</option>
                             </select>
-                        </article>
+                        </section>
+                        <section class="loi">
+                            123asda ds asd
+                        </section>
                     </section>
                 </li>
                 <li>
