--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -10,24 +10,27 @@
         clear: both;
     }
 
-        .lct-form > * > ul {
+        .lct-form ul {
             padding: 5px;
         }
 
-            .lct-form > * > ul > li {
+            .lct-form ul > li {
                 display: flex;
                 margin: 10px 0px;
             }
 
-                .lct-form > * > ul > li > .tieu-de {
+                .lct-form li > .tieu-de {
                     min-width: 150px;
                     max-width: 150px;
                 }
 
-                .lct-form > * > ul > li > .noi-dung {
+                .lct-form li > .noi-dung {
                     width: 100%;
                 }
-
+                
+    .lct-form .tieu-de {
+        border-right: 3px solid transparent;
+    }
     .lct-form .tieu-de label {
         text-align: right;
         display: block;
@@ -68,6 +71,29 @@
             animation: xoay 1s infinite;
             -webkit-animation: xoay 1s infinite;
             -moz-animation: xoay 1s infinite;
+        }
+
+        .lct-form li.co-loi .tieu-de {
+            border-right-color: #e00;
+        }
+
+        .lct-form .loi {
+            color: #fff;
+            background-color: #e00;
+            padding: 5px;
+            font-weight: bold;
+            line-height: 30px;
+        }
+
+        .lct-form .loi:before {
+            font: normal 30px Icon;
+            content: '\e6c5';
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            text-align: center;
+            vertical-align: middle;
         }
 
 @keyframes xoay {
@@ -1356,34 +1382,39 @@
 
         .lct-cay .cay .nut a {
             display: block;
-            float: left;
             padding: 0px 10px;
             color: #555;
             line-height: 30px;
+            position: relative;
         }
+
+            .lct-cay .cay .nut > li:not(:last-child) > a {
+                padding-right: 20px;
+            }
 
             .lct-cay .cay .nut a:hover {
                 color: #000;
             }
 
-        .lct-cay .cay .nut > li > u {
+        .lct-cay .cay .nut > li > a:after {
+            content: '';
             display: block;
-            float: left;
             width: 10px;
             height: 30px;
             background-color: #eee;
+            position: absolute;
             right: 0px;
             top: 0px;
             transition: 0.5s;
         }
 
-        .lct-cay .cay .nut > li:last-child > u {
-            display: none;
-        }
+            .lct-cay .cay .nut > li:last-child > a:after {
+                display: none;
+            }
 
-        .lct-cay .cay .nut > li > u:hover {
-            background-color: #08c;
-        }
+            .lct-cay .cay .nut > li:hover > a:after {
+                background-color: #08c;
+            }
 
         .lct-cay .cay .nut-con {
             display: none;
@@ -1397,9 +1428,9 @@
             overflow-y: scroll;
         }
 
-        .lct-cay .cay .nut > li > u:hover .nut-con {
-            display: block;
-        }
+            .lct-cay .cay .nut > li:not(:last-child):hover .nut-con {
+                display: block;
+            }
 
         .lct-cay .cay .nut-con > li {
         }
@@ -1739,3 +1770,4 @@
 /*#endregion */
 
 /*#endregion */
+
