--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -25,7 +25,7 @@ a:hover {
     text-decoration: underline;
 }
 .site-image {
-    background-image: url('../../images/AllSiteImages.png');
+    background-image: url('../../images/LCT/AllSiteImages.png');
 }
 @font-face {
     font-family: Freeway;
