--- a/LCTMoodle/Views/ChuDe/QuanLy.cshtml
+++ b/LCTMoodle/Views/ChuDe/QuanLy.cshtml
@@ -2,14 +2,13 @@
     ViewData["TieuDe"] = "Quản lý chủ đề";
     Layout = "~/Views/LCT/Khung.cshtml";
 
-    var danhSachPhamVi = LCTMoodle.Helpers.LCTHelper.layDanhSachPhamVi_DayDu();
+    var danhSachPhamVi = Helpers.LCTHelper.layDanhSachPhamVi_DayDu();
 }
 
 @section Styles {
     <link rel="stylesheet" type="text/css" href="/Content/styles/LCT/Form.css" />
 }
 @section Scripts {
-    <script src="/Content/scripts/LCT/Form.js"></script>
     <script src="/Content/scripts/ChuDe/QuanLy.js"></script>
     
     <script>
