--- a/LCTMoodle/Content/styles/NguoiDung/Index.css
+++ b/LCTMoodle/Content/styles/NguoiDung/Index.css
@@ -1,7 +1,8 @@
 ﻿/*#region Khung trên */
 
 .khung-tren {
-    display: flex;
+    display: flex;    
+    padding: 5px;
 }
 
     .khung-tren .hinh-dai-dien {
