--- a/LCTMoodle/Views/NguoiDung/Index.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Index.cshtml
@@ -10,14 +10,18 @@
 }
 
 <section class="hop hop-2-vien">    
-    <article class="noi-dung khung-tren">
-        <div class="hinh-dai-dien">
-            <img src="/Content/images/user-avatar-01.jpg" />
-        </div>
-        <div class="thong-tin-nguoi-dung">
-            <div class="ten-nguoi-dung">PenguinBlue-Chip</div>
-            <div class="loai-nguoi-dung">Người dùng</div>
-        </div>
+    <article class="noi-dung">
+        <section>
+            <article class="khung-tren">
+                <div class="hinh-dai-dien">
+                    <img src="/Content/images/user-avatar-01.jpg" />
+                </div>
+                <div class="thong-tin-nguoi-dung">
+                    <div class="ten-nguoi-dung">PenguinBlue-Chip</div>
+                    <div class="loai-nguoi-dung">Người dùng</div>
+                </div>
+            </article>
+        </section>
     </article>
 </section>
 <section class="hop hop-1-vien" >  
