--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/Content/styles/LCT/Form.css" />    
 }
 @section Scripts {    
+    <script type="text/javascript" src="/Content/scripts/NguoiDung/DangKy.js"></script>
 }
 
 <article class="hop-form">
@@ -15,7 +16,7 @@
         để được trải nghiệm các khoá học bổ ích        
     </section>
     <section class="noi-dung">
-        <form class="lct-form" action="#" method="post">
+        <form class="lct-form" action="/NguoiDung/XuLyThemNguoiDung" method="POST" id="TaoNguoiDung">
             <article>
                 <ul>
                     <li>
