--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -36,7 +36,7 @@
                         <li><a href="#"><i class="pe-7s-chat"></i></a></li>
                         <li><a href="#"><i class="pe-7s-global"></i></a></li>
                         <li>
-                            <a href="#" data-show-target="HopDieuKhien">
+                            <a href="javascript:void(0)" data-show-target="HopDieuKhien">
                                 <img src="/Content/images/user-avatar.jpg" />
                                 <span>@Session["NguoiDung"]</span>
                             </a>
