--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="/Content/scripts/NguoiDung/DangKy.js"></script>
 }
 
-<article class="hop-form">
+<article class="hop-form hop-2-vien">
     <section class="tieu-de">
         Đăng ký tài khoản LCTMoodle
         <br />
