--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -9,7 +9,7 @@
 
 }
 
-<article class="hop-form">
+<article class="hop-form hop-2-vien">
     <section class="tieu-de">
         LCTMoodle
         <br />
