Update popup API

--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -15,6 +15,9 @@
     <form action="#" method="post" class="noi-dung lct-form">
         <article>
             <ul>
+                <li class="loi-dan">
+                    Hãy nhập các thông tin sau
+                </li>
                 <li>
                     <section class="tieu-de">
                         <label>
@@ -48,6 +51,9 @@
                             123asda ds asd
                         </section>
                     </section>
+                </li>
+                <li class="loi-dan">
+                    Hãy nhập các thông tin sau
                 </li>
                 <li>
                     <section class="tieu-de">
@@ -85,6 +91,9 @@
                             <textarea name="name" data-mac-dinh="Mặc định (textarea)" placeholder="Hãy nhập"></textarea>
                         </article>
                     </section>
+                </li>
+                <li class="thong-bao">
+                    Thông tin này nên nhập chính xác
                 </li>
                 <li>
                     <section class="tieu-de">
