--- a/LCTMoodle/Content/styles/LCT/Form.css
+++ b/LCTMoodle/Content/styles/LCT/Form.css
@@ -18,6 +18,21 @@
                 display: flex;
                 margin: 10px 0px;
             }
+                .lct-form ul > li.loi-dan {
+                    background-color: #f8f8f8;
+                    border: 1px solid #eee;
+                    padding: 10px;
+                    color: #555;
+                }
+                                
+                .lct-form ul > li.loi-dan:not(:first-child) {
+                    margin-top: 30px;
+                }
+
+                .lct-form ul > li.thong-bao {
+                    padding: 10px;
+                    color: #555;
+                }
 
                 .lct-form li > .tieu-de {
                     min-width: 150px;
@@ -1412,7 +1427,7 @@
             top: -1px;
             background-color: #fff;
             border: 1px solid #ddd;
-            z-index: 1;
+            z-index: 5;
             max-height: 100px;
             overflow-y: scroll;
         }
