--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -74,6 +74,7 @@ a:hover {
     color: #08c;
     line-height: 30px;
     margin-bottom: 5px;
+    padding: 0 5px;
 }
 .hop > .tieu-de.can-giua {
     text-align: center;
@@ -104,33 +105,42 @@ body.khong-scroll {
     overflow: hidden;
 }
 
-.popup-full {
+.popup-full-container {
+    display: table;
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 19;
-    width: 100%;
-    min-height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
 }
 
-    .popup-full .khung-tat {
+    .popup-full-container .khung-tat {
         position: absolute;
         width: 100%;
         height: 100%;
     }
 
-    .popup-full .khung-noi-dung {
-        margin: 0 auto;
-        background-color: rgba(255, 255, 255, 0.5);
-        margin-top: 10vh;
-        padding: 5px;
-        border: 1px solid #ddd;
-        position: relative;
-        max-width: 90vw;
-        max-height: 80vh;
-        overflow-y: auto;
+    .popup-full-container .popup-full {
+        background-color: rgba(0, 0, 0, 0.3);
+        display: table-cell;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        vertical-align: middle;
     }
+
+        .popup-full-container .popup-full .khung-noi-dung {
+            text-align: left;
+            display: inline-block;
+            max-width: 90vw;
+            max-height: 90vh;
+            background-color: #fff;
+            padding: 5px;
+            border: 1px solid #ddd;
+            position: relative;
+            overflow-y: auto;
+        }
 
 /*#endregion */
 
